--- a/productStore/src/styles/form.module.css
+++ b/productStore/src/styles/form.module.css
@@ -1,16 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100&family=IBM+Plex+Mono:wght@300&display=swap");
 
+.mainContainer {
+  width: 100%;
+  border-radius: 10px;
+  background-color: rgba(84, 199, 224, 0.3);
+  padding: 1vh 0 2vh 0;
+}
+
+.titleContainer {
+  display: flex;
+  height: 9vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .title {
-  width: auto;
-  margin: 2.5vh 0 2.5vh 0;
   font-family: "antonio", sans-serif;
+  font-size: 3.5vh;
   text-align: center;
-  color:#3e6769;
+  color: #087e8b;
 }
 
 form {
-  background-color: rgba(62, 103, 105, 0.4);
-  width: 97%;
+  width: 100%;
   margin: 1.5%;
   display: grid;
   gap: 1vh;
@@ -18,7 +31,7 @@ form {
   font-size: 3vh;
   text-decoration: none;
   color: rgb(52, 52, 52);
-  border-radius: 4px;
+  border-radius: 8px;
   margin: auto;
  
 }
@@ -27,7 +40,7 @@ input,
 option,
 select {
   justify-content: space-between;
-  border-radius: 2px;
+  border-radius: 8px;
   width: 95%;
   margin: auto;
   border: none;
@@ -43,11 +56,11 @@ span {
 }
 ::placeholder{
   font-family: "IBM Plex Mono", monospace;
-  color: grey;
+  color: #087e8b;
 }
 select{
   font-family: "IBM Plex Mono", monospace;
-  color: grey;
+  color: #087e8b;
 }
 
 .formButtonContainer {
@@ -58,21 +71,20 @@ flex-direction: row;
 justify-content: end;}
 
 
-button[type=submit],
 .formButton {
+  width: 20vw;
     font-family: 'Antonio', sans-serif;
     text-decoration: none;
-    font-size: 2.5vh;
-    margin: 3vh 0 3vh 0;
-    background-color: #3e6769;
+    font-size: 2.8vh;
+    margin: 3vh 0 3vh 2vw;
+    background-color: #087e8b;
     color: whitesmoke;
-    padding: 0.3vh;
+    padding: 1vh 2vw 1.5vh 2vw;
     border: none;
-    border-radius: 2px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
-
-
-@media (min-width: 768px) {
- form{width: 30vw;}}
+@media (max-width: 768px){
+.formButton{
+width: 40vw;}}
