--- a/productStore/src/styles/form.module.css
+++ b/productStore/src/styles/form.module.css
@@ -82,8 +82,14 @@ justify-content: end;}
     padding: 1vh 2vw 1.5vh 2vw;
     border: none;
     border-radius: 20px;
-    cursor: pointer;
-}
+    transition: background-color 0.3s ease, color 0.3s ease;
+    &:hover {
+      cursor: pointer;
+      background-color: #00f9fd;
+      color: #087e8b; 
+    }
+  }
+
 
 @media (max-width: 768px){
 .formButton{
