--- a/productStore/src/styles/allListStyles.module.css
+++ b/productStore/src/styles/allListStyles.module.css
@@ -6,9 +6,8 @@
     width: 100%;
     border-radius: 10px;
     background-color: rgba(84, 199, 224, 0.3);
-    padding: 1vh 0 2vh 0;
-    font-family: "IBM plex Mono", sans-serif;
-    
+    padding: 0 0 2vh 0;
+    font-family: "IBM plex Mono", sans-serif; 
 }
 
 .titleContainer {
@@ -103,6 +102,7 @@ td {
 
 @media (max-width: 768px){
     .mainContainer{
+        position: relative;
 height: 100vh;}
 }
 
